JBPM-3211: Use osfamily rather than os property in installer